<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/layoutOption"
        android:icon="@drawable/ic_view_quilt_white_24dp"
        android:orderInCategory="1"
        android:title="@string/layout_toggle"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/myItems"
        android:title="@string/my_items"
        app:showAsAction="never" />
    <item
        android:id="@+id/allItems"
        android:title="@string/all_items"
        app:showAsAction="never" />
    <item
        android:id="@+id/register"
        android:title="@string/register"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/login"
        android:title="@string/login"
        app:showAsAction="never" />
</menu>